<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".ui.passenger.PassengerJourneyActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/enter_trip_details"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="122sp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/trip_icon" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:padding="16sp">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="200sp"
                android:layout_height="27dp"
                android:layout_weight=".2"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/bus_no"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/busNoTxt"
                android:layout_width="200sp"
                android:layout_height="27dp"
                android:textSize="18sp" />

        </TableRow>

        <TableRow android:padding="16sp">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="200sp"
                android:layout_height="27dp"
                android:layout_weight=".2"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/next_station"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/NextStationTxt"
                android:layout_width="200sp"
                android:layout_height="27dp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:padding="16sp">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="200sp"
                android:layout_height="27dp"
                android:layout_weight=".2"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/start_station"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/StartStationSpinner"
                style="@style/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
        </TableRow>

        <TableRow android:padding="16sp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="200sp"
                android:layout_height="27dp"
                android:layout_weight=".2"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/end_station"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/EndStationSpinner"
                style="@style/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />

        </TableRow>

        <TableRow android:layout_gravity="center">

            <ImageView
                android:id="@+id/confirmBtn"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:contentDescription="@string/confirm_btn"
                android:onClick="onClick"
                app:srcCompat="@drawable/confirm_btn" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/tapBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tap_in_btn"
                android:onClick="onClick"
                app:srcCompat="@drawable/tap_in_btn" />
        </TableRow>
    </TableLayout>


</LinearLayout>