<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".ui.passenger.PassengerAccountActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="22sp"
                android:layout_weight=".7"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="@string/my_account"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="108dp"
                android:layout_height="117dp"
                android:layout_weight=".1"
                app:srcCompat="@drawable/my_account_icon" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_weight=".4"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/travel_card_no"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PassengerAccountTravelCardNo"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_weight=".6"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_weight=".4"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/credit_balance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PassengerAccountCreditBalance"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_weight=".6"
                android:textSize="18sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_weight=".4"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/loan_amount"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PassengerAccountLoanAmount"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_weight=".6"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="64dp"
        android:layout_height="118dp"
        android:layout_marginLeft="16sp"
        app:srcCompat="@drawable/credit_card_ico" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="371dp"
        android:layout_height="284dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassengerAccountLoanAmount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="@string/cards"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/CardList"
                android:layout_width="356dp"
                android:layout_height="234dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>