<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".ui.passenger.PassengerAddCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16sp"
            android:layout_marginTop="22sp"
            android:layout_weight=".7"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/add_card"
            android:textSize="36sp" />

        <ImageView
            android:layout_width="100sp"
            android:layout_height="64sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:src="@drawable/credit_card_ico" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AddCardCardNumInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddCardCardNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:longClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:paddingTop="16sp"
            android:paddingBottom="16sp">

            <Spinner
                android:id="@+id/AddCardMonthSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:entries="@array/months" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward_slash" />

            <Spinner
                android:id="@+id/AddCardYearSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:entries="@array/years" />


        </TableRow>

        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AddCardCVCInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:hint="@string/cvc"
                android:paddingStart="8sp"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/AddCardCVCEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:longClickable="false" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/AddCardAddCardBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:clickable="true"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:src="@drawable/add_card" />

</LinearLayout>